<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="Text">What_is_the_largest_city_and_commercial_capital_of_sri_Lanka</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="category">Category</string>
    <string name="start">start</string>
    <string name="difficulty">Difficulty</string>
    <string name="category_mixed_">Category: Mixed</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="clear_history">Clear history</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result</string>
    <string name="category_mixed">Category: Mixed</string>
    <string name="difficulty_">Difficulty:</string>
    <string name="correct_answers">Correct answers:</string>
    <string name="result_">Result:</string>
    <string name="correct_answers_room">Correct answers:</string>
    <string name="difficulty_room">Difficulty:</string>
    <string name="correct">Correct answers:</string>
</resources>