<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="18dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/rl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_category_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/category_mixed"
                android:textColor="#1F2041"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_correct_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_category_result"
                android:layout_marginTop="12sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/correct_answers_room"
                android:textColor="#801F2041"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_correct_result"
                android:layout_marginTop="10sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/difficulty_room"
                android:textColor="#801F2041"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/menu_dots_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_menu_settings" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_difficulty"
                android:layout_alignParentEnd="true"
                android:text="12 may 2019 20:30" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>