<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.quiz.QuizFragment">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_illustration"
        android:layout_width="60dp"
        android:layout_height="85dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/art"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_question_amount"
        style="@style/text_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_illustration"
        android:layout_marginTop="@dimen/top_44sp"
        android:text="@string/questions_amount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_illustration"
        android:layout_marginStart="8sp"
        android:layout_marginTop="42sp"
        android:layout_toEndOf="@+id/tv_question_amount"
        android:textColor="#3F3356"
        android:textSize="15sp"
        tools:text="10" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_question_amount"
        android:layout_marginStart="@dimen/start_64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/start_64dp"
        android:stepSize="1"
        android:value="5"
        android:valueFrom="1"
        android:valueTo="10"
        app:thumbColor="#BE52F2"
        app:trackColor="#BE52F2"
        app:trackColorInactive="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_category"
        style="@style/text_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slider"
        android:layout_marginTop="8sp"
        android:text="@string/category" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_container_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_category"
        android:layout_marginStart="@dimen/start_64dp"
        android:layout_marginEnd="@dimen/start_64dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_difficulty"
        style="@style/text_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView_container_spinner"
        android:layout_marginTop="8sp"
        android:text="@string/difficulty" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_container_spinner_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_difficulty"
        android:layout_marginStart="@dimen/start_64dp"
        android:layout_marginEnd="@dimen/start_64dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp">

        <Spinner
            android:id="@+id/spinner_2"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView_container_spinner_2"
        android:layout_marginStart="@dimen/start_64dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="@dimen/start_64dp"
        android:background="@drawable/bg_btn_rounded"
        android:text="@string/start"
        android:textColor="@color/white" />

</RelativeLayout>